--- a/templates/galeria.html
+++ b/templates/galeria.html
@@ -9,6 +9,15 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
     <title>Olá, mundo!</title>
+    <style>  
+      @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap'); 
+      body, html {  
+    margin: 0;  
+    padding: 0;  
+    width: 100%;  
+    overflow-x: hidden;  
+  }  
+      </style>
   </head>
   <body>
 
@@ -16,6 +25,7 @@
 
     {% block content %}  
         <!-- Conteúdo da página -->  
+<div style="width: 1500px;background: linear-gradient(to right, black, rgb(66, 66, 66));margin-left: -100px; height: 300px;margin-top: 0%;"><header style="color: white; margin-left: 0px;width: 100vw;text-align: center;font-size: 3em;padding-top: 70px;font-family: pacifico, cursive;font-weight: 100;">Conheça meus principais trabalhos</header></div>
         <div class="card-columns">  
             {% for image in images %}  
             <div class="card">  
