--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">  
             <ul class="navbar-nav">  
                 <li class="nav-item">  
-                    <a class="nav-link" href="{{ url_for('galeria') }}">Galeria</a>  
+                    <a class="nav-link" href="{{ url_for('ideias') }}">Ideias</a>  
                 </li>  
                 <li class="nav-item">  
                     <a class="nav-link" href="{{ url_for('about') }}">Sobre</a>  
