--- a/templates/about.html
+++ b/templates/about.html
@@ -8,9 +8,33 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-    <title>Olá, mundo!</title>
+    <title>Sobre</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <style>
+      .texto{
+    margin-top: -300px;
+    height: 400px;
     
+    color: rgb(113, 113, 127);
+    font-family: 'Playwrite CU';
+    font-size: 40px;
+    display: flex;
+}
+
+.cont{
+margin-top: -300px;
+padding-top: -50px;
+font-family: "Work Sans", sans-serif;
+display: block;
+font-size: 25px;
+color: rgb(113, 113, 127);
+}
+
+body{
+    background-color: rgb(55, 55, 55);
+}
+    </style>
   </head>
   <body>
     {% extends 'base.html' %}  
