--- a/templates/ideias.html
+++ b/templates/ideias.html
@@ -25,7 +25,8 @@
 
     {% block content %}  
         <!-- Conteúdo da página -->  
-<div style="width: 1500px;background: linear-gradient(to right, black, rgb(66, 66, 66));margin-left: -100px; height: 300px;margin-top: 0%;"><header style="color: white; margin-left: 0px;width: 100vw;text-align: center;font-size: 3em;padding-top: 80px;font-family: pacifico, cursive;font-weight: 100;">Tatuagens para fazer conosco</header></div>
+        <header style="color: white;text-align: center;font-size: 3em;margin-top: 50px;font-family: pacifico, cursive;font-weight: 100;">Tatuagens para fazer conosco</header>
+<div style="width: 3000px;background: linear-gradient(to right, black, rgb(66, 66, 66));margin-left: -200px; height: 300px;margin-top: 0%;margin-top: -200px;"></div>
         <div class="card-columns">  
             {% for image in ideias %}  
             <div class="card">  
