--- a/templates/galeria.html
+++ b/templates/galeria.html
@@ -1,51 +1,50 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-  <head>
-    <!-- Meta tags Obrigatórias -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<!DOCTYPE html>  
+<html lang="pt-br">  
+  <head>  
+    <!-- Meta tags Obrigatórias -->  
+    <meta charset="utf-8">  
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">  
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <!-- Bootstrap CSS -->  
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">  
 
-    <title>Home</title>
+    <title>Home</title>  
     <style>  
-      @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap'); 
+      @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');   
       body, html {  
-    margin: 0;  
-    padding: 0;  
-    width: 100%;  
-    overflow-x: hidden;  
-  }  
-      </style>
-  </head>
-  <body>
+        margin: 0;  
+        padding: 0;  
+        width: 100%;  
+        overflow-x: hidden;  
+      }  
+    </style>  
+  </head>  
+  <body>  
 
     {% extends 'base.html' %}  
 
     {% block content %}  
         <!-- Conteúdo da página -->  
-        <header style="color: white;text-align: center;font-size: 3em;margin-top: 50px;font-family: pacifico, cursive;font-weight: 100;">Conheça meus principais trabalhos</header>
-<div style="width: 3000px;background: linear-gradient(to right, black, rgb(66, 66, 66));margin-left: -600px; height: 300px;margin-top: 0%;margin-top: -200px;"></div>
+        <header style="color: white;text-align: center;font-size: 3em;margin-top: 50px;font-family: pacifico, cursive;font-weight: 100;">Conheça meus principais trabalhos</header>  
+        <div style="width: 3000px;background: linear-gradient(to right, black, rgb(66, 66, 66));margin-left: -600px; height: 300px;margin-top: 0%;margin-top: -200px;"></div>  
         <div class="card-columns">  
             {% for image in images %}  
             <div class="card">  
-                <img class="card-img" src="{{ url_for('static', filename='images/' + image) }}" alt="Imagem do card">  
+                <img class="card-img" src="{{ url_for('static', filename='images/' + image.filename) }}" alt="Imagem do card">  
             </div>  
             {% endfor %}  
             {% if new_image %}  
             <div class="card">  
-                <img class="card-img" src="{{ url_for('static', filename='images/' + new_image) }}" alt="Nova imagem">  
+                <img class="card-img" src="{{ url_for('static', filename='images/' + new_image.filename) }}" alt="Nova imagem">  
             </div>  
             {% endif %}  
-        </div>
-    {% endblock %}
+        </div>  
+    {% endblock %}  
 
-
-    <!-- JavaScript (Opcional) -->
-    <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-  </body>
+    <!-- JavaScript (Opcional) -->  
+    <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->  
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>  
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>  
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>  
+  </body>  
 </html>
